@@ -2,8 +2,8 @@ package potatoni.goorm.form.member;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -11,22 +11,29 @@ public class MemberService {
     private final MemberRepository memberRepository;
 
     public MemberDto signup(MemberDto memberDto) {
+        // MemberEntity 생성
         MemberEntity member = new MemberEntity(null, memberDto.loginId(), memberDto.name(), memberDto.password());
-        MemberEntity newMember = memberRepository.save(member);
-        return new MemberDto(member.id(), newMember.loginId(), newMember.name(), null);
+        // 저장
+        MemberEntity savedMember = memberRepository.save(member);
+        // 변환하여 반환
+        return convertToDto(savedMember);
     }
+
     public List<MemberDto> findAll() {
-        return memberRepository.findAll()
-                .stream()
-                .map(memberEntity -> new MemberDto(memberEntity.id(), memberEntity.loginId(), memberEntity.name(), null))
-                .toList();
+        return memberRepository.findAll().stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
     }
 
     public MemberDto login(String loginId, String password) {
-        MemberEntity member = memberRepository.findByLoginId(loginId)
-                .filter(m -> m.password().equals(password))
-                .orElseThrow(() -> new RuntimeException("Member info is not found!")); // 이부분 예외 처리 수정하기
-        return new MemberDto(member.id(), member.loginId(), member.name(), null);
+        return memberRepository.findByLoginId(loginId)
+                .filter(m -> m.getPassword().equals(password))
+                .map(this::convertToDto)
+                .orElseThrow(() -> new RuntimeException("Invalid login credentials!"));
+    }
 
+    // MemberEntity를 MemberDto로 변환하는 헬퍼 메소드
+    private MemberDto convertToDto(MemberEntity member) {
+        return new MemberDto(member.getId(), member.getLoginId(), member.getName(), null);  // 비밀번호는 보안상 전달하지 않습니다.
     }
 }
